--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap");
+* {
+  font-family: "Zen Kaku Gothic Antique", sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  scroll-behavior: smooth;
+}
+body {
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+h1 {
+  font-size: 40px;
+  font-weight: bold;
+}
+p {
+  font-size: 16px;
+}
+li {
+  list-style: none;
+  font-weight: 600;
+  /* margin-left: 2rem; */
+  padding: 0 20px;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+li a:hover {
+  background-color: white;
+  padding:0.2rem 1rem;
+  opacity: 0.80;
+}
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(5px);
+  }
+  60% {
+    transform: translateY(3px);
+  }
 }
